@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,17 +27,13 @@
  * @summary Test for multiple vs single cookie header for HTTP/2 vs HTTP/1.1
  * @library /test/lib /test/jdk/java/net/httpclient/lib
  * @build jdk.httpclient.test.lib.common.HttpServerAdapters jdk.test.lib.net.SimpleSSLContext
- * @run testng/othervm
+ * @run junit/othervm
  *       -Djdk.tls.acknowledgeCloseNotify=true
  *       -Djdk.httpclient.HttpClient.log=trace,headers,requests
  *       CookieHeaderTest
  */
 
 import jdk.test.lib.net.SimpleSSLContext;
-import org.testng.annotations.AfterTest;
-import org.testng.annotations.BeforeTest;
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Test;
 
 import javax.net.ServerSocketFactory;
 import javax.net.ssl.SSLContext;
@@ -75,25 +71,34 @@ import jdk.httpclient.test.lib.common.HttpServerAdapters;
 import static java.lang.System.out;
 import static java.net.http.HttpClient.Version.HTTP_1_1;
 import static java.net.http.HttpClient.Version.HTTP_2;
+import static java.net.http.HttpClient.Version.HTTP_3;
+import static java.net.http.HttpOption.H3_DISCOVERY;
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static org.testng.Assert.assertEquals;
-import static org.testng.Assert.assertTrue;
+
+import org.junit.jupiter.api.AfterAll;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 public class CookieHeaderTest implements HttpServerAdapters {
 
-    SSLContext sslContext;
-    HttpTestServer httpTestServer;        // HTTP/1.1    [ 6 servers ]
-    HttpTestServer httpsTestServer;       // HTTPS/1.1
-    HttpTestServer http2TestServer;       // HTTP/2 ( h2c )
-    HttpTestServer https2TestServer;      // HTTP/2 ( h2  )
-    DummyServer httpDummyServer;
-    DummyServer httpsDummyServer;
-    String httpURI;
-    String httpsURI;
-    String http2URI;
-    String https2URI;
-    String httpDummy;
-    String httpsDummy;
+    private static final SSLContext sslContext = SimpleSSLContext.findSSLContext();
+    private static HttpTestServer httpTestServer;        // HTTP/1.1    [ 6 servers ]
+    private static HttpTestServer httpsTestServer;       // HTTPS/1.1
+    private static HttpTestServer http2TestServer;       // HTTP/2 ( h2c )
+    private static HttpTestServer https2TestServer;      // HTTP/2 ( h2  )
+    private static HttpTestServer http3TestServer;       // HTTP/3 ( h3  )
+    private static DummyServer httpDummyServer;
+    private static DummyServer httpsDummyServer;
+    private static String httpURI;
+    private static String httpsURI;
+    private static String http2URI;
+    private static String https2URI;
+    private static String http3URI;
+    private static String httpDummy;
+    private static String httpsDummy;
 
     static final String MESSAGE = "Basic CookieHeaderTest message body";
     static final int ITERATIONS = 3;
@@ -106,8 +111,7 @@ public class CookieHeaderTest implements HttpServerAdapters {
         return String.format("[%d s, %d ms, %d ns] ", secs, mill, nan);
     }
 
-    @DataProvider(name = "positive")
-    public Object[][] positive() {
+    public static Object[][] positive() {
         return new Object[][] {
                 { httpURI, HTTP_1_1  },
                 { httpsURI, HTTP_1_1  },
@@ -115,6 +119,7 @@ public class CookieHeaderTest implements HttpServerAdapters {
                 { httpsDummy, HTTP_1_1 },
                 { httpURI, HttpClient.Version.HTTP_2  },
                 { httpsURI, HttpClient.Version.HTTP_2  },
+                { http3URI, HttpClient.Version.HTTP_3 },
                 { httpDummy, HttpClient.Version.HTTP_2 },
                 { httpsDummy, HttpClient.Version.HTTP_2 },
                 { http2URI, null  },
@@ -124,13 +129,14 @@ public class CookieHeaderTest implements HttpServerAdapters {
 
     static final AtomicLong requestCounter = new AtomicLong();
 
-    @Test(dataProvider = "positive")
+    @ParameterizedTest
+    @MethodSource("positive")
     void test(String uriString, HttpClient.Version version) throws Exception {
         out.printf("%n---- starting (%s) ----%n", uriString);
         ConcurrentHashMap<String, List<String>> cookieHeaders
                 = new ConcurrentHashMap<>();
         CookieHandler cookieManager = new TestCookieHandler(cookieHeaders);
-        HttpClient client = HttpClient.newBuilder()
+        HttpClient client = newClientBuilderForH3()
                 .followRedirects(Redirect.ALWAYS)
                 .cookieHandler(cookieManager)
                 .sslContext(sslContext)
@@ -150,6 +156,9 @@ public class CookieHeaderTest implements HttpServerAdapters {
         if (version != null) {
             requestBuilder.version(version);
         }
+        if (version == HTTP_3) {
+            requestBuilder.setOption(H3_DISCOVERY, http3TestServer.h3DiscoveryConfig());
+        }
         HttpRequest request = requestBuilder.build();
         out.println("Initial request: " + request.uri());
 
@@ -157,19 +166,27 @@ public class CookieHeaderTest implements HttpServerAdapters {
             out.println("iteration: " + i);
             HttpResponse<String> response = client.send(request, BodyHandlers.ofString());
 
-            out.println("  Got response: " + response);
+            out.println("  Got response: " + response + ", config=" + request.getOption(H3_DISCOVERY)
+                    + ", version=" + response.version());
             out.println("  Got body Path: " + response.body());
 
-            assertEquals(response.statusCode(), 200);
-            assertEquals(response.body(), MESSAGE);
-            assertEquals(response.headers().allValues("X-Request-Cookie"),
-                    cookies.stream()
-                            .filter(s -> !s.startsWith("LOC"))
-                            .collect(Collectors.toList()));
+            assertEquals(200, response.statusCode());
+            assertEquals(MESSAGE, response.body());
+            List<String> expectedCookieList = cookies.stream()
+                    .filter(s -> !s.startsWith("LOC")).toList();
+            List<String> actualCookieList = response.headers()
+                    .allValues("X-Request-Cookie");
+            assertEquals(expectedCookieList, actualCookieList);
+            if (version == HTTP_3 && i > 0) {
+                assertEquals(HTTP_3, response.version());
+            }
             requestBuilder = HttpRequest.newBuilder(uri)
                     .header("X-uuid", "uuid-" + requestCounter.incrementAndGet());
             if (version != null) {
                 requestBuilder.version(version);
+            }
+            if (version == HTTP_3) {
+                requestBuilder.setOption(H3_DISCOVERY, http3TestServer.h3DiscoveryConfig());
             }
             request = requestBuilder.build();
         }
@@ -177,12 +194,8 @@ public class CookieHeaderTest implements HttpServerAdapters {
 
     // -- Infrastructure
 
-    @BeforeTest
-    public void setup() throws Exception {
-        sslContext = new SimpleSSLContext().get();
-        if (sslContext == null)
-            throw new AssertionError("Unexpected null sslContext");
-
+    @BeforeAll
+    public static void setup() throws Exception {
         httpTestServer = HttpTestServer.create(HTTP_1_1);
         httpTestServer.addHandler(new CookieValidationHandler(), "/http1/cookie/");
         httpURI = "http://" + httpTestServer.serverAuthority() + "/http1/cookie/retry";
@@ -196,6 +209,9 @@ public class CookieHeaderTest implements HttpServerAdapters {
         https2TestServer = HttpTestServer.create(HTTP_2, sslContext);
         https2TestServer.addHandler(new CookieValidationHandler(), "/https2/cookie/");
         https2URI = "https://" + https2TestServer.serverAuthority() + "/https2/cookie/retry";
+        http3TestServer = HttpTestServer.create(HTTP_3, sslContext);
+        http3TestServer.addHandler(new CookieValidationHandler(), "/http3/cookie/");
+        http3URI = "https://" + http3TestServer.serverAuthority() + "/http3/cookie/retry";
 
 
         // DummyServer
@@ -209,12 +225,13 @@ public class CookieHeaderTest implements HttpServerAdapters {
         httpsTestServer.start();
         http2TestServer.start();
         https2TestServer.start();
+        http3TestServer.start();
         httpDummyServer.start();
         httpsDummyServer.start();
     }
 
-    @AfterTest
-    public void teardown() throws Exception {
+    @AfterAll
+    public static void teardown() throws Exception {
         httpTestServer.stop();
         httpsTestServer.stop();
         http2TestServer.stop();
